--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "__MSG_appName__",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "__MSG_appDesc__",
   "default_locale": "en",
   "icons": {
@@ -12,7 +12,7 @@
     "256": "assets/icon/enhanced_dhs256.png"
   },
   "author": "Supakarn Laorattanakul",
-  "permissions": ["activeTab", "storage", "webRequest"],
+  "permissions": ["activeTab", "storage", "tabs"],
   "host_permissions": ["https://*.hotstar.com/*", "https://hotstar.com/*"],
   "background": {
     "service_worker": "background.js"
@@ -20,16 +20,16 @@
   "content_scripts": [
     {
       "matches": ["https://*.hotstar.com/*", "https://hotstar.com/*"],
-      "js": ["content-subtitle.js", "content-dualsubtitle.js"]
+      "js": ["content-subtitle.js"]
     }
   ],
   "action": {
     "default_title": "Enhance your Hotstar",
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "assets/icon/d_action_icon16.png",
-      "32": "assets/icon/d_action_icon32.png",
-      "48": "assets/icon/d_action_icon48.png"
+      "16": "assets/icon/d_action_icon_default16.png",
+      "32": "assets/icon/d_action_icon_default32.png",
+      "48": "assets/icon/d_action_icon_default48.png"
     }
   }
 }
