--- a/package.json
+++ b/package.json
@@ -1,37 +1,69 @@
 {
   "name": "enhanced-dhs",
+  "displayName": "__MSG_appName__",
+  "version": "0.5.0",
+  "description": "__MSG_appDesc__",
   "author": "iamprompt <wearedprompt@gmail.com>",
   "license": "MIT",
   "repository": "https://github.com/iamprompt/enhanced-dhs.git",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "build:service-worker": "yarn build -c vite.config.sw.ts",
-    "build:subtitle": "yarn build -c vite.config.subtitle.ts",
-    "build:popup": "yarn build -c vite.config.popup.ts",
-    "build:all": "rm -f -r dist && yarn build:service-worker && yarn build:subtitle && yarn build:popup",
-    "package": "NODE_ENV=production yarn build:all && mkdir -p release && zip -x '**/.DS_Store' -r release/enhanced-dhs-$(date +'%Y%m%d-%H%M').zip dist"
+    "dev": "npm run clear && cross-env NODE_ENV=development run-p dev:*",
+    "dev:prepare": "esno scripts/prepare.ts",
+    "dev:web": "vite",
+    "dev:content": "npm run build:content -- --mode development",
+    "dev:sw": "npm run build:sw -- --mode development",
+    "build": "cross-env NODE_ENV=production run-s clear build:web build:prepare build:content build:sw",
+    "build:prepare": "esno scripts/prepare.ts",
+    "build:web": "vite build",
+    "build:content": "vite build --config vite.config.content.ts",
+    "build:sw": "vite build --config vite.config.sw.ts",
+    "pack": "cross-env NODE_ENV=production run-p pack:*",
+    "pack:zip": "rimraf extension.zip && jszip-cli add extension -o ./extension.zip",
+    "pack:crx": "crx pack extension -o ./extension.crx",
+    "pack:xpi": "cross-env WEB_EXT_ARTIFACTS_DIR=./ web-ext build --source-dir ./extension --filename extension.xpi --overwrite-dest",
+    "start:chromium": "web-ext run --source-dir ./extension --target=chromium",
+    "start:firefox": "web-ext run --source-dir ./extension --target=firefox-desktop",
+    "clear": "rimraf extension/dist extension/manifest.json extension.*",
+    "lint": "eslint 'src/**/*.{json,ts,js,vue}'"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
+    "crx": "^5.0.1",
+    "esno": "^0.14.0",
+    "fs-extra": "^10.0.0",
+    "kolorist": "^1.5.1",
+    "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "styled-components": "^5.3.0"
+    "rimraf": "^3.0.2",
+    "styled-components": "^5.3.3",
+    "unplugin-auto-import": "^0.5.11",
+    "webext-bridge": "^5.0.2",
+    "webextension-polyfill": "^0.8.0"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.3.3",
-    "@types/chrome": "^0.0.145",
-    "@types/node": "^15.12.4",
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.8",
-    "@types/styled-components": "^5.1.10",
-    "@vitejs/plugin-react-refresh": "^1.3.3",
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.2",
-    "twin.macro": "^2.5.0",
-    "typescript": "^4.3.4",
-    "vite": "^2.3.8",
+    "@antfu/eslint-config": "^0.16.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@types/chrome": "^0.0.177",
+    "@types/fs-extra": "^9.0.13",
+    "@types/node": "^17.0.12",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/styled-components": "^5.1.21",
+    "@types/webextension-polyfill": "^0.8.2",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "autoprefixer": "^10.4.2",
+    "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.3.0",
+    "jszip-cli": "^1.4.24",
+    "nodemon": "^2.0.15",
+    "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.16",
+    "twin.macro": "^2.8.2",
+    "typescript": "^4.5.5",
+    "vite": "^2.7.13",
     "vite-plugin-babel-macros": "^1.0.5",
-    "vite-preset-react": "^1.3.0"
+    "vite-preset-react": "^2.2.0"
   }
 }
